--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sidedrawer-sdk",
+    "name": "sidedrawer-javascript-sdk",
     "author": "Juan Matias Doder",
     "description": "This is a sdk of SideDrawer to help to build development quickly.",
     "version": "0.1.13",
