--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "typings": "dist/index.d.ts",
     "files": [
         "dist"
-        
     ],
     "engines": {
         "node": ">=12"
@@ -66,6 +65,8 @@
     "dependencies": {
         "@auth0/auth0-spa-js": "^1.18.0",
         "axios": "^0.21.1",
+        "form-data": "^4.0.0",
+        "fs": "0.0.1-security",
         "openid-client": "^4.7.4",
         "rxjs": "^6.6.7"
     }
