--- a/package.json
+++ b/package.json
@@ -2,61 +2,42 @@
   "name": "@sidedrawer/sdk",
   "version": "0.0.1",
   "description": "SideDrawer SDK",
-  "source": "src/index.ts",
-  "module": "dist/sidedrawer.mjs",
-  "main": "dist/sidedrawer.js",
-  "types": "dist/types.d.ts",
-  "min": "dist/sidedrawer.min.js",
+  "main": "./dist/index.js",
+  "browser": "./dist/index.browser.js",
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/index.node.d.ts",
   "sourceMap": false,
-  "targets": {
-    "module": {
-      "sourceMap": false,
-      "optimize": true
-    },
-    "main": {
-      "sourceMap": false,
-      "optimize": true
-    },
-    "types": {
-      "sourceMap": false
-    },
-    "min": {
-      "sourceMap": false,
-      "context": "browser",
-      "engines": {
-        "browsers": "> 0.2%, not dead"
-      },
-      "outputFormat": "global",
-      "scopeHoist": true,
-      "optimize": true
-    }
-  },
   "scripts": {
-    "watch": "parcel watch",
-    "build": "parcel build",
-    "test": "jest --runInBand --coverage",
+    "prebuild": "npx rimraf ./dist/*",
+    "build": "npx rollup --config",
+    "test": "npx jest --runInBand --detectOpenHandles --coverage",
     "build-docs": "npx typedoc --options typedoc.json"
   },
   "author": "SideDrawer Inc.",
   "license": "MIT",
   "devDependencies": {
-    "@parcel/packager-ts": "^2.8.3",
-    "@parcel/transformer-typescript-types": "^2.8.3",
-    "@swc/helpers": "^0.5.0",
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "buffer": "^6.0.3",
-    "jest": "^29.5.0",
-    "nock": "^13.3.0",
-    "parcel": "^2.8.3",
-    "process": "^0.11.10",
-    "ts-jest": "^29.1.0",
-    "typedoc": "^0.24.1",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
+    "@swc/helpers": "^0.5.1",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.4.2",
+    "@types/crypto-js": "^4.1.1",
+    "jest": "^29.6.1",
+    "nock": "^13.3.1",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.26.3",
+    "ts-jest": "^29.1.1",
+    "typedoc": "^0.24.8",
     "typedoc-plugin-rename-defaults": "^0.6.5",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "axios": "^1.3.5",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.1"
   }
 }
