--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-    "include": ["src", "types", "tests"],
+    "include": ["src"],
     "compilerOptions": {
       "experimentalDecorators": true,
       "target": "ES2015",
@@ -33,6 +33,7 @@
       "forceConsistentCasingInFileNames": true,
       // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
       "noEmit": true,
+      "outDir": "./dist"
     }
   }
   
