add configuration to package.json to be able to publish to npm

--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
       "path": "dist/index.browser.js",
       "limit": "100 kB"
     }
-  ]
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  }
 }
