--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,7 @@
-name: CI
-on: [workflow_dispatch]
+name: Test
+on:
+  pull_request:
+    types: [labeled, reopened, synchronize, ready_for_review]
 jobs:
   build:
     timeout-minutes: 10
