--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ["18.x"] # todo: use ['14.x', '16.x', '18.x']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        node: ["18.x", "20.x"] # todo: use ['14.x', '16.x', '18.x']
+        os: [ubuntu-latest, windows-latest]
 
     steps:
       - name: Checkout repo
