--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: ["18.x", "20.x"] # todo: use ['14.x', '16.x', '18.x']
+        node: ["18.x", "20.x"]
         os: [ubuntu-latest, windows-latest]
 
     steps:
